--- a/code/tip.css
+++ b/code/tip.css
@@ -22,6 +22,19 @@ i {
 }
 
 
+/* phone only */
+@media screen and (max-width: 768px) {
+    .phone-margin-last-item {
+        margin-bottom: 40px;
+    }
+
+    .phone-margin-input {
+        margin-left: 25px;
+        margin-right: 30px;
+    }
+}
+
+
 /* css classes */
 /* often used */
 .center-element-x {
@@ -37,24 +50,61 @@ i {
     border: 2px solid white;
 }
 
-.width-tip-section {
-    width: 58%;
+
+@media screen and (max-width: 768px) {
+    .width-tip-section {
+        width: 100%;
+    }
+}
+@media screen and (min-width: 769px) {
+    .width-tip-section {
+        width: 90%;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .width-tip-section {
+        width: 58%;
+    }
 }
 
-.padding-white-tip {
-    padding-top: 25px;
-    padding-bottom: 25px;
+
+@media screen and (max-width: 768px) {
+    .padding-white-tip {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
+}
+@media screen and (min-width: 769px) {
+    .padding-white-tip {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
 }
 
 
 /* logo */
-.margin-logo {
-    margin-top: 70px;
-    margin-bottom: 70px;
+@media screen and (max-width: 768px) {
+    .margin-logo {
+        margin-top: 50px;
+        margin-bottom: 40px;
+    }
+}
+@media screen and (min-width: 769px) {
+    .margin-logo {
+        margin-top: 115px;
+        margin-bottom: 105px;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .margin-logo {
+        margin-top: 65px;
+        margin-bottom: 55px;
+    }
 }
 
+
 .size-text-logo {
-    font-size: large;
+    font-size: larger;
 }
 
 
@@ -77,16 +127,42 @@ i {
     border: 2px solid var(--green-price);
 }
 
-.green-price-sides {
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-top: 33px;
-    padding-bottom: 28px;
+
+@media screen and (max-width: 768px) {
+    .green-price-sides {
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 25px;
+        padding-bottom: 22px;
+    }
+}
+@media screen and (min-width: 769px) {
+    .green-price-sides {
+        padding-left: 25px;
+        padding-right: 25px;
+        padding-top: 33px;
+        padding-bottom: 28px;
+    }
 }
 
-.box-width {
-    width: 38%;
+
+@media screen and (max-width: 768px) {
+    .box-width-left {
+        width: 90%;
+    }
+    .box-width-right {
+        width: 80%;
+    }
 }
+@media screen and (min-width: 769px) {
+    .box-width-left {
+        width: 38%;
+    }
+    .box-width-right {
+        width: 38%;
+    }
+}
+
 
 .text-price {
     color: var(--light-green-price);
@@ -103,13 +179,40 @@ i {
     font-size: small;
 }
 
-.margin-top-item {
-    margin-top: 40px;
+
+@media screen and (max-width: 768px) {
+    .margin-top-item {
+        margin-top: 20px;
+    }
+}
+@media screen and (min-width: 769px) {
+    .margin-top-item {
+        margin-top: 55px;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .margin-top-item {
+        margin-top: 40px;
+    }
 }
 
-.margin-bottom-last-price {
-    margin-bottom: 120px;
+
+@media screen and (max-width: 768px) {
+    .margin-bottom-last-price {
+        margin-bottom: 20px;
+    }
 }
+@media screen and (min-width: 769px) {
+    .margin-bottom-last-price {
+        margin-bottom: 150px;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .margin-bottom-last-price {
+        margin-bottom: 120px;
+    }
+}
+
 
 .reset-button {
     width: 100%;
@@ -148,9 +251,22 @@ i {
     border: 2px solid var(--green);
 }
 
-.margin-top-item-input {
-    margin-top: 55px;
+@media screen and (max-width: 768px) {
+    .margin-top-item-input {
+        margin-top: 65px;
+    }
 }
+@media screen and (min-width: 769px) {
+    .margin-top-item-input {
+        margin-top: 75px;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .margin-top-item-input {
+        margin-top: 55px;
+    }
+}
+
 
 .tip-button{
     width: 30%;
